# maximum-independent-set

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: advanced tutorial 1 - Diving into Quantum Programming.ipynb  advanced tutorial 2 - Bypassing device constraints.ipynb  advanced tutorial 3 - Using qubo-solver.ipynb  tutorial 1 - Using a Quantum Device to solve MIS.ipynb  tutorial 2 - Using GreedyMIS to take better advantage of Quantum Hardware.ipynb  tutorial 5 - weighted MIS.ipynb
examples/datasets/dimacs/: a265032_1tc.16.txt  a265032_1tc.8.txt
mis/: __init__.py
mis/_backends/: __init__.py  data.py  types.py
mis/_backends/backends/: __init__.py  base_backend.py  get_backend.py  local_backends.py  remote_backends.py
mis/coloring/: coloring.py
mis/pipeline/: basesolver.py  config.py  embedder.py  kernelization.py  layout.py  pulse.py
mis/shared/: graphs.py  types.py
mis/solver/: solver.py
tests/: conftest.py  test_backends.py  test_embedding.py  test_kernelization.py  test_pulse_shaping.py  test_qubo.py
