[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maximum-independent-set"
description = "A Python library designed to help users design classical- and quantum-driven solutions for the Maximum Independent Set (MIS) problem."
readme = "README.md"
version = "0.3.1"
requires-python = ">=3.10"
license = { text = "MIT-derived" }
keywords = ["quantum"]
authors = [
  { name = "Manu Lahariya",   email = "manu.lahariya@pasqal.com" },
  { name = "David Teller",    email = "david.teller@pasqal.com" },
  { name = "Roland Guichard", email = "roland.guichard@pasqal.com" },
  { name = "Charles Moussa", email = "c.moussa@pasqal.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

# always specify a version for each package
# to maintain consistency
dependencies = [
  "networkx",
  "numpy",
  "torch",
  "torch_geometric",
  "matplotlib",
  "pandas",
  "geopy",
  "qoolqit[solvers]==0.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true
allow-ambiguous-features = true

[project.optional-dependencies]
extras = [
  "jupyter",
  "tqdm",
]

[project.urls]
Documentation = "https://pasqal-io.github.io/maximum-independent-set/latest/"
Issues = "https://github.com/pasqal-io/maximum-independent-set/issues"
Source = "https://github.com/pasqal-io/maximum-independent-set"

[tool.hatch.envs.default]
installer = "uv"
features = ["extras"]
dependencies = [
  "flaky",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "pytest-asyncio",
  "pytest-markdown-docs",
  "nbconvert",
  "ipykernel",
  "pre-commit",
  "black",
  "isort",
  "ruff",
  "pydocstringformatter",
]

[tool.hatch.envs.default.scripts]
test = "pytest -n auto --cov-report=xml --cov-config=pyproject.toml --cov=mis --cov=tests --markdown-docs {args}"
test_readme = "pytest --markdown-docs README.md docs/"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """-vvv --cov-report=xml --cov-config=pyproject.toml --cov=mis --cov=tests --markdown-docs"""
xfail_strict = true
filterwarnings = [
  "ignore:Call to deprecated create function FieldDescriptor",
  "ignore:Call to deprecated create function Descriptor",
  "ignore:Call to deprecated create function EnumDescriptor",
  "ignore:Call to deprecated create function EnumValueDescriptor",
  "ignore:Call to deprecated create function FileDescriptor",
  "ignore:Call to deprecated create function OneofDescriptor",
  "ignore:distutils Version classes are deprecated.",
]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"

[tool.hatch.envs.docs]
installer = "uv"
dependencies = [
  "mkdocs>=0.15",
  "mkdocs-material",
  "mkdocs-jupyter",
  "mkdocstrings",
  "mkdocstrings-python",
  "mkdocs-section-index",
  "mkdocs-exclude",
  "mkapi<4.5.0",
  "markdown-exec",
  "pymdown-extensions",
  "mike",
]

[tool.hatch.envs.docs.scripts]
build = "cp examples/*.ipynb docs; mkdir -p docs/datasets/dimacs docs/datasets/coloring; cp examples/datasets/dimacs/* docs/datasets/dimacs; cp examples/datasets/coloring/* docs/datasets/coloring; mkdocs build --clean {args}"
serve = "cp examples/*.ipynb docs; mkdir -p docs/datasets/dimacs docs/datasets/coloring; cp examples/datasets/dimacs/* docs/datasets/dimacs; cp examples/datasets/coloring/* docs/datasets/coloring; mkdocs serve --dev-addr localhost:8000 {args}"
test = "cp examples/*.ipynb docs; mkdir -p docs/datasets/dimacs docs/datasets/coloring; cp examples/datasets/dimacs/* docs/datasets/dimacs; cp examples/datasets/coloring/* docs/datasets/coloring; mkdocs build --clean {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311", "312"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.gitignore",
    "/.pre-commit-config.yml",
    "/tests",
    "/docs",
    "/examples",
]

[tool.hatch.build.targets.wheel]
packages = ["mis"]

[tool.coverage.run]
branch = true
parallel = true
# uncomment to omit any file from the
# coverage. Regexps can be used
# to select all files from a folder
#omit = [
#  "template_python/to_omit.py",
#]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 100

[lint]
extend-ignore = ["F841"]
select = ["E", "F", "I", "Q"]

[lint.isort]
required-imports = ["from __future__ import annotations"]

[lint.per-file-ignores]
"__init__.py" = ["F401"]

[lint.mccabe]
max-complexity = 15

[lint.flake8-quotes]
docstring-quotes = "double"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = false
ignore_missing_imports = true
